--- a/bramble-api/build.gradle
+++ b/bramble-api/build.gradle
@@ -5,15 +5,15 @@ targetCompatibility = 1.8
 apply plugin: 'witness'
 
 dependencies {
-	implementation "com.google.dagger:dagger:2.0.2"
+	implementation "com.google.dagger:dagger:$daggerVersion"
 	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-	testImplementation 'junit:junit:4.12'
-	testImplementation "org.jmock:jmock:2.8.2"
-	testImplementation "org.jmock:jmock-junit4:2.8.2"
-	testImplementation "org.jmock:jmock-legacy:2.8.2"
-	testImplementation "org.hamcrest:hamcrest-library:1.3"
-	testImplementation "org.hamcrest:hamcrest-core:1.3"
+	testImplementation "junit:junit:$junitVersion"
+	testImplementation "org.jmock:jmock:$jmockVersion"
+	testImplementation "org.jmock:jmock-junit4:$jmockVersion"
+	testImplementation "org.jmock:jmock-legacy:$jmockVersion"
+	testImplementation "org.hamcrest:hamcrest-library:$hamcrestVersion"
+	testImplementation "org.hamcrest:hamcrest-core:$hamcrestVersion"
 }
 
 dependencyVerification {
