--- a/bramble-j2se/build.gradle
+++ b/bramble-j2se/build.gradle
@@ -12,16 +12,16 @@ dependencies {
 	implementation 'net.java.dev.jna:jna:4.4.0'
 	implementation 'net.java.dev.jna:jna-platform:4.4.0'
 
-	apt 'com.google.dagger:dagger-compiler:2.0.2'
+	apt "com.google.dagger:dagger-compiler:$daggerVersion"
 
 	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
 	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
-	testImplementation 'junit:junit:4.12'
-	testImplementation "org.jmock:jmock:2.8.2"
-	testImplementation "org.jmock:jmock-junit4:2.8.2"
-	testImplementation "org.jmock:jmock-legacy:2.8.2"
-	testImplementation "org.hamcrest:hamcrest-library:1.3"
-	testImplementation "org.hamcrest:hamcrest-core:1.3"
+	testImplementation "junit:junit:$junitVersion"
+	testImplementation "org.jmock:jmock:$jmockVersion"
+	testImplementation "org.jmock:jmock-junit4:$jmockVersion"
+	testImplementation "org.jmock:jmock-legacy:$jmockVersion"
+	testImplementation "org.hamcrest:hamcrest-library:$hamcrestVersion"
+	testImplementation "org.hamcrest:hamcrest-core:$hamcrestVersion"
 }
 
 dependencyVerification {
