--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -6,7 +6,6 @@ dependencies {
 	implementation project(path: ':bramble-core', configuration: 'default')
 	implementation project(path: ':bramble-android', configuration: 'default')
 
-	def supportVersion = '27.0.1'
 	implementation "com.android.support:support-v4:$supportVersion"
 	implementation("com.android.support:appcompat-v7:$supportVersion") {
 		exclude module: 'support-v4'
@@ -34,7 +33,7 @@ dependencies {
 	implementation 'com.github.bumptech.glide:glide:3.8.0'
 	implementation 'uk.co.samuelwall:material-tap-target-prompt:2.1.0'
 
-	annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
+	annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
 
@@ -43,12 +42,12 @@ dependencies {
 	testImplementation 'org.robolectric:robolectric:3.5.1'
 	testImplementation 'org.robolectric:shadows-support-v4:3.0'
 	testImplementation 'org.mockito:mockito-core:2.8.9'
-	testImplementation 'junit:junit:4.12'
-	testImplementation "org.jmock:jmock:2.8.2"
-	testImplementation "org.jmock:jmock-junit4:2.8.2"
-	testImplementation "org.jmock:jmock-legacy:2.8.2"
-	testImplementation "org.hamcrest:hamcrest-library:1.3"
-	testImplementation "org.hamcrest:hamcrest-core:1.3"
+	testImplementation "junit:junit:$junitVersion"
+	testImplementation "org.jmock:jmock:$jmockVersion"
+	testImplementation "org.jmock:jmock-junit4:$jmockVersion"
+	testImplementation "org.jmock:jmock-legacy:$jmockVersion"
+	testImplementation "org.hamcrest:hamcrest-library:$hamcrestVersion"
+	testImplementation "org.hamcrest:hamcrest-core:$hamcrestVersion"
 }
 
 dependencyVerification {
