--- a/build.gradle
+++ b/build.gradle
@@ -21,22 +21,34 @@ buildscript {
 	dependencies {
 		classpath 'com.android.tools.build:gradle:3.0.1'
 		classpath 'net.ltgt.gradle:gradle-apt-plugin:0.9'
-		classpath 'de.undercouch:gradle-download-task:3.2.0'
+		classpath 'de.undercouch:gradle-download-task:3.3.0'
 		classpath files('libs/gradle-witness.jar')
 	}
 }
 
-// If a Java 6 JRE is available, check we're not using any Java 7 or 8 APIs
-ext.useJava6StandardLibrary = { task ->
-	def home = System.env.JAVA_6_HOME;
-	if (home != null && !home.isEmpty()) {
-		println "Setting Java 6 bootstrap classpath for ${task.name}"
-		task.dependsOn createJavaLangInvokeJar
-		task.options.bootstrapClasspath = files(
-				"${project.rootDir}/build/invoke.jar",
-				"${home}/jre/lib/rt.jar",
-				"${home}/jre/lib/jsse.jar"
-		)
+
+ext {
+	// Define common library version centrally
+	daggerVersion = '2.0.2'
+	supportVersion = '27.0.1'
+	junitVersion = '4.12'
+	jmockVersion = '2.8.2'
+	hamcrestVersion = '1.3'
+	torVersion = '0.2.9.12'
+	geoipVersion = '2017-09-06'
+
+	// If a Java 6 JRE is available, check we're not using any Java 7 or 8 APIs
+	useJava6StandardLibrary = { task ->
+		def home = System.env.JAVA_6_HOME;
+		if (home != null && !home.isEmpty()) {
+			println "Setting Java 6 bootstrap classpath for ${task.name}"
+			task.dependsOn createJavaLangInvokeJar
+			task.options.bootstrapClasspath = files(
+					"${project.rootDir}/build/invoke.jar",
+					"${home}/jre/lib/rt.jar",
+					"${home}/jre/lib/jsse.jar"
+			)
+		}
 	}
 }
 
