Prefer project modules over prebuilt dependencies.

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'witness'
 
+configurations.all {
+	resolutionStrategy.preferProjectModules()
+}
+
 dependencies {
 	implementation project(path: ':briar-core', configuration: 'default')
 	implementation project(path: ':bramble-core', configuration: 'default')
