--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -4,17 +4,18 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<uses-feature android:name="android.hardware.bluetooth"/>
-	<uses-feature android:name="android.hardware.camera" />
+	<uses-feature android:name="android.hardware.camera"/>
 
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	<uses-permission android:name="android.permission.BLUETOOTH" />
-	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	<uses-permission android:name="android.permission.BLUETOOTH"/>
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+	<uses-permission android:name="android.permission.CAMERA"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.READ_LOGS"/>
-	<uses-permission android:name="android.permission.VIBRATE" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="android.permission.VIBRATE"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+
 	<uses-permission-sdk-23 android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
 
 	<application
@@ -69,8 +70,8 @@
 
 		<activity
 			android:name="org.briarproject.briar.android.splash.SplashScreenActivity"
-			android:theme="@style/BriarTheme.NoActionBar"
-			android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:theme="@style/BriarTheme.NoActionBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
@@ -84,15 +85,15 @@
 
 		<activity
 			android:name="org.briarproject.briar.android.navdrawer.NavDrawerActivity"
-			android:theme="@style/BriarTheme.NoActionBar"
-		    android:launchMode="singleTop">
+			android:launchMode="singleTop"
+			android:theme="@style/BriarTheme.NoActionBar">
 		</activity>
 
 		<activity
 			android:name="org.briarproject.briar.android.contact.ConversationActivity"
 			android:label="@string/app_name"
-			android:theme="@style/BriarTheme.NoActionBar"
 			android:parentActivityName="org.briarproject.briar.android.navdrawer.NavDrawerActivity"
+			android:theme="@style/BriarTheme.NoActionBar"
 			android:windowSoftInputMode="stateHidden|adjustResize">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -132,7 +133,7 @@
 				android:value="org.briarproject.briar.android.navdrawer.NavDrawerActivity"/>
 		</activity>
 
-			<activity
+		<activity
 			android:name="org.briarproject.briar.android.privategroup.memberlist.GroupMemberListActivity"
 			android:label="@string/groups_member_list"
 			android:parentActivityName="org.briarproject.briar.android.privategroup.conversation.GroupActivity"
@@ -304,8 +305,8 @@
 		<activity
 			android:name="org.briarproject.briar.android.keyagreement.KeyAgreementActivity"
 			android:label="@string/add_contact_title"
-			android:theme="@style/BriarTheme.NoActionBar"
-			android:parentActivityName="org.briarproject.briar.android.navdrawer.NavDrawerActivity">
+			android:parentActivityName="org.briarproject.briar.android.navdrawer.NavDrawerActivity"
+			android:theme="@style/BriarTheme.NoActionBar">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value="org.briarproject.briar.android.navdrawer.NavDrawerActivity"/>
@@ -355,6 +356,16 @@
 		<activity
 			android:name="org.briarproject.briar.android.test.TestDataActivity"
 			android:label="Create test data"
+			android:parentActivityName="org.briarproject.briar.android.settings.SettingsActivity">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="org.briarproject.briar.android.settings.SettingsActivity"
+				/>
+		</activity>
+
+		<activity
+			android:name="org.briarproject.briar.android.test.PollingTestActivity"
+			android:label="Test polling"
 			android:parentActivityName="org.briarproject.briar.android.settings.SettingsActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
