Move expiry date to TestingConstants.

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -244,6 +244,7 @@ android {
 		resValue "string", "app_package", "org.briarproject.briar.android"
 		resValue "string", "app_name", "Briar"
 		buildConfigField "String", "GitHash", "\"${getGitHash()}\""
+		buildConfigField "Long", "BuildTimestamp", "${System.currentTimeMillis()}L"
 	}
 
 	buildTypes {
