--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -245,8 +245,9 @@ android {
 		resValue "string", "app_name", "Briar"
 		buildConfigField "String", "GitHash",
 				"\"${getStdout(['git', 'rev-parse', '--short=7', 'HEAD'], 'No commit hash')}\""
+		def now = (long) (System.currentTimeMillis() / 1000)
 		buildConfigField "Long", "BuildTimestamp",
-				"${getStdout(['git', 'log', '-n', '1', '--format=%ct'], 0)}000L"
+				"${getStdout(['git', 'log', '-n', '1', '--format=%ct'], now)}000L"
 	}
 
 	buildTypes {
