Also remind to sign-in again after app was upgraded

--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -26,10 +26,11 @@
 		android:theme="@style/BriarTheme">
 
 		<receiver
-			android:name="org.briarproject.briar.android.BootReceiver"
+			android:name="org.briarproject.briar.android.login.SignInReminderReceiver"
 			android:exported="false">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
+				<action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
 			</intent-filter>
 		</receiver>
 
