First prototype of Espresso test infrastructure with automatic screenshoting

--- a/bramble-android/build.gradle
+++ b/bramble-android/build.gradle
@@ -15,6 +15,12 @@ android {
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 
+	buildTypes {
+		debug
+		screenshot
+		release
+	}
+
 	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_1_8
 		targetCompatibility JavaVersion.VERSION_1_8
