MVP of PIN lock feature
This only shows the settings if a screen lock is available.
If the setting is activated, it shows a drawer item for locking.
Once locked, the screen lock secret needs to be entered to enter the
app again.

First part of #1247

--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -402,5 +402,11 @@
 			android:theme="@android:style/Theme.NoDisplay">
 		</activity>
 
+		<activity
+			android:name=".android.login.UnlockActivity"
+			android:label="@string/lock_unlock"
+			android:launchMode="singleTask"
+			android:theme="@style/BriarTheme.NoActionBar"/>
+
 	</application>
 </manifest>
